# fugu-pyqt6

./: .gitignore  Feedback.md  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml
src/fugu/: main.py
src/fugu/agent/: AgentPresenter.py
src/fugu/agent/model/: AgentModel.py  EvaluatorOpenAIThread.py  OrchestratorOpenAIThread.py
src/fugu/agent/view/: AgentHistory.py  AgentItemDelegate.py  AgentList.py  AgentListModel.py  AgentView.py
src/fugu/chat/: ChatPresenter.py
src/fugu/chat/model/: ChatModel.py  SakanaAIThread.py
src/fugu/chat/view/: ChatHistory.py  ChatView.py  ChatWidget.py
src/fugu/custom/: ChatItemDelegate.py  ChatList.py  ChatListModel.py  CheckComboBox.py  CheckDoubleSpinBox.py  CheckLineEdit.py  CheckSpinBox.py  PromptListWidget.py  PromptTextEdit.py
src/fugu/util/: AnimatedProgressBar.py  AppInfoDialog.py  ChatType.py  ConfirmationDialog.py  Constants.py  DataManager.py  GlobalSetting.py  Paths.py  RenameDialog.py  SettingsManager.py  SqliteDatabase.py  Utility.py  VerticalLine.py
